:bug: FIxed scrollbar flickering

--- a/client/src/assets/styles/main.styl
+++ b/client/src/assets/styles/main.styl
@@ -11,6 +11,7 @@ html, body, #app
     height 100%
 
 body
+    overflow-y scroll
     font-family 'Heebo', sans-serif
 
 input, button, textarea, select, a
